--- a/In-lab data and online data.ipynb
+++ b/In-lab data and online data.ipynb
@@ -849,7 +849,7 @@
     }
    ],
    "source": [
-    "plt.title('Random Forest - Receiver Operating Characteristic')\n",
+    "plt.title('Neural Net - Receiver Operating Characteristic')\n",
     "plt.plot(false_positive_rate, true_positive_rate, 'b',\n",
     "label='AUC = %0.2f'% roc_auc)\n",
     "plt.legend(loc='lower right')\n",
